; ModuleID = '/home/carl/AnghaBench/h2o/lib/common/extr_memory.c_h2o_buffer_reserve.c'
source_filename = "/home/carl/AnghaBench/h2o/lib/common/extr_memory.c_h2o_buffer_reserve.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_8__ = type { i32 }
%struct.TYPE_7__ = type { i32* }

@.str = private unnamed_addr constant [59 x i8] c"failed to reserve buffer; capacity: %zu, min_gurantee: %zu\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @h2o_buffer_reserve(%struct.TYPE_8__** %0, i64 %1) #0 {
  %3 = alloca %struct.TYPE_7__, align 8
  %4 = alloca %struct.TYPE_8__**, align 8
  %5 = alloca i64, align 8
  store %struct.TYPE_8__** %0, %struct.TYPE_8__*** %4, align 8
  store i64 %1, i64* %5, align 8
  %6 = load %struct.TYPE_8__**, %struct.TYPE_8__*** %4, align 8
  %7 = load i64, i64* %5, align 8
  %8 = call i32* @h2o_buffer_try_reserve(%struct.TYPE_8__** %6, i64 %7)
  %9 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %3, i32 0, i32 0
  store i32* %8, i32** %9, align 8
  %10 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %3, i32 0, i32 0
  %11 = load i32*, i32** %10, align 8
  %12 = icmp eq i32* %11, null
  br i1 %12, label %13, label %20

13:                                               ; preds = %2
  %14 = load %struct.TYPE_8__**, %struct.TYPE_8__*** %4, align 8
  %15 = load %struct.TYPE_8__*, %struct.TYPE_8__** %14, align 8
  %16 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 4
  %18 = load i64, i64* %5, align 8
  %19 = call i32 @h2o_fatal(i8* getelementptr inbounds ([59 x i8], [59 x i8]* @.str, i64 0, i64 0), i32 %17, i64 %18)
  br label %20

20:                                               ; preds = %13, %2
  %21 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %3, i32 0, i32 0
  %22 = load i32*, i32** %21, align 8
  ret i32* %22
}

declare dso_local i32* @h2o_buffer_try_reserve(%struct.TYPE_8__**, i64) #1

declare dso_local i32 @h2o_fatal(i8*, i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
